[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "hello-world"
path = "examples/hello-world.rs"
crate-type = ["cdylib"]


[dependencies]
wdk = { path = "../wdk" }
wdk-sys = { path = "../wdk-sys" }

[build-dependencies]
wdk-build = { path = "../wdk-build" }

