[package]
name = "wdk-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2"

[build-dependencies]
bindgen = "0.64"
cc = "1.0"
wdk-build = { path = "../wdk-build" }

[features]
default = ["ntoskrnl"]
ntoskrnl = []