[package]
name = "wdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
wdk-sys = { path = "../wdk-sys" }
cty = "0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
const-utf16 = { version = "0.2" }
fallible_collections = { version = "0.4", features = ["rust_1_57"] }
